--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,6 +2,10 @@
 body {
     background-color: skyblue;
 }
+
+button {
+    color: blue;
+}
     #minuteStr {
         color: #ff0000;
         font-size: 20px;
